# tech-companies-analysis

./: .gitignore  Dockerfile  README.md  create_duckdb.py  pyproject.toml
tech_companies_project/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml  query_duckdb.py  verify_tables.py
tech_companies_project/models/: company_summary.sql  sources.yml  tech_companies.sql
