[tool.poetry]
name = "tech-companies-analysis"
version = "0.1.0"
description = "A project for analyzing data related to tech companies"
authors = ["Josh <jhvmilton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.0.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
